--- a/style.css
+++ b/style.css
@@ -501,6 +501,7 @@ nav i {
     display: flex;
     flex-direction: column;
     gap: 1vh;
+    font-size: 1.2vw;
 }
 
 .footer_bottom .footer_social a {
