--- a/About/about.css
+++ b/About/about.css
@@ -1,8 +1,79 @@
-#about_home{
-    height: 1000vh;
-    width: 100vw;
-    font-size: 3vw;
+#container {
+  /* height: 120vh; */
+  width: 100%;
+  background-color: transparent;
+  position: relative;
+  /* z-index: 100; */
 }
-#about_home h1{
-   margin-top: 23vw;
+.home_wrapper {
+  height: 100vh;
+  width: 100%;
+  background-color: transparent;
+  position: absolute;
+
+}
+#about_home {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 7vw;
+}
+
+#header {
+  height: auto;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+
+
+}
+
+#header img {
+  /* margin-top: 8vw; */
+  width: 550px;
+}
+
+#about_content {
+  width: 80%;
+  z-index: 1; 
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+
+}
+
+#about_content img {
+  height: 30vw;
+  border-radius: 10%;
+}
+
+#about_content .about_me {
+  width: 45%;
+  letter-spacing: .8px;
+  line-height: 1.6vw;
+  font-size: 1vw;
+  font-family: 'PPMori';
+}
+#education{
+  width: 100%;
+  min-height: 100vh;
+  position: relative;
+  padding-top: 5vw;
+  text-align: center;
+   
+}
+#education h1{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
+  font-size: 14vw;
+  font-family: 'ConeriaScriptDemo';
+  color: #fff;
+  z-index: 1;
+  opacity: 0.09;
 }
