--- a/style/mobile.css
+++ b/style/mobile.css
@@ -117,6 +117,7 @@
 
     #content .title {
         font-size: 18px;
+        height: auto;
     }
 
     #content .title span {
@@ -225,6 +226,7 @@
 
     .footer_content h1 {
         font-size: 18px;
+        height: auto;
     }
 
     .footer_content h1 span {
