--- a/contact/style.css
+++ b/contact/style.css
@@ -6,7 +6,6 @@
 
 
 #contact {
-  /* min-height: 100vh; */
   width: 100%;
   position: absolute;
   top: 12%;
@@ -100,7 +99,10 @@
   text-decoration: none;
 }
 .bottom_contact-info img{
-  height: 50px;
+  height: 45px;
+}
+.bottom_contact-info img:hover{
+   transform: scale(1.2);
 }
 
 .contact-form form {
@@ -121,6 +123,7 @@
   margin-bottom: 15px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  color: #000;
 }
 
 .contact-form button {
@@ -133,6 +136,56 @@
   font-size: 16px;
 }
 
+.bottom_contact-info{
+  bottom: 5%;
+}
 .contact-form button:hover {
   background-color: #005fa1;
+}
+
+
+
+
+
+
+
+
+
+/* Css for mobile layout  */
+@media only screen and (max-width: 768px) {
+  .contact_inner {
+    width: 85%;
+    margin: auto;
+    padding: 2.2vh;
+  }
+  .contact-info{
+    height: 24vh;
+  }
+  .contact-info h3 {
+    font-size: 2.3vh;
+  }
+  .contact-info p{
+    font-size: 1.4vh;
+    margin-bottom: 1vh;
+  }
+  
+  .contact-info ul li{
+    margin: 0;
+  }
+  .contact-info ul li img{
+    height: 30px;
+    margin: 0;
+  }
+  
+  .contact-info ul li a{
+    font-size: 1.4vh;
+  }
+  
+  .bottom_contact-info {
+    margin-top: 1vh;
+  }
+  .bottom_contact-info img{
+    height: 30px;
+  }
+  
 }
